[gd_scene load_steps=12 format=3 uid="uid://xme6qr3na7wn"]

[ext_resource type="PackedScene" uid="uid://b2inypsd3hnu3" path="res://core/player.tscn" id="1_k46nh"]
[ext_resource type="Script" path="res://tutorial.gd" id="1_kxyj8"]
[ext_resource type="PackedScene" uid="uid://j2h0mycvgt31" path="res://ui/input_label.tscn" id="3_0kbhp"]
[ext_resource type="PackedScene" uid="uid://bqexl4pg2hn7q" path="res://ui/dialogue_display.tscn" id="3_dvwo2"]
[ext_resource type="PackedScene" uid="uid://b7df8x1riaxk1" path="res://objects/pillar.tscn" id="5_mg3jf"]
[ext_resource type="PackedScene" uid="uid://iy5i7i0k7q0k" path="res://enemies/zombie.tscn" id="6_avfxn"]
[ext_resource type="PackedScene" uid="uid://dusjyyttd7bio" path="res://enemies/skullbat.tscn" id="7_v6ew8"]
[ext_resource type="PackedScene" uid="uid://6ekhfs5r7yol" path="res://characters/merchant.tscn" id="8_v7xag"]
[ext_resource type="Texture2D" uid="uid://dm8snesre8q2x" path="res://sprite/props/sign.png" id="9_icu4e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drbt6"]
size = Vector2(18, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jkj6"]

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_kxyj8")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -100

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.168627, 0.156863, 1)

[node name="Player" parent="." instance=ExtResource("1_k46nh")]
position = Vector2(-741, 197)
jumpStrength = 60.0

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(-824, 240)
scale = Vector2(159.379, 19.3503)
collision_layer = 32768
collision_mask = 0

[node name="ColorRect2" type="ColorRect" parent="Floor" groups=["floor"]]
offset_right = 18.0
offset_bottom = 28.0
color = Color(0.192157, 0.168627, 0.168627, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor"]
position = Vector2(9, 14)
shape = SubResource("RectangleShape2D_drbt6")

[node name="Floor2" type="StaticBody2D" parent="."]
position = Vector2(-1427, -404)
scale = Vector2(33.5852, 37.1353)
collision_layer = 32768
collision_mask = 0

[node name="ColorRect2" type="ColorRect" parent="Floor2" groups=["floor"]]
offset_right = 18.0
offset_bottom = 28.0
color = Color(0.192157, 0.168627, 0.168627, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor2"]
position = Vector2(9, 14)
shape = SubResource("RectangleShape2D_drbt6")

[node name="Floor3" type="StaticBody2D" parent="."]
position = Vector2(1589, -500)
scale = Vector2(33.5852, 37.1353)
collision_layer = 32768
collision_mask = 0

[node name="ColorRect2" type="ColorRect" parent="Floor3" groups=["floor"]]
offset_right = 18.0
offset_bottom = 28.0
color = Color(0.192157, 0.168627, 0.168627, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor3"]
position = Vector2(9, 14)
shape = SubResource("RectangleShape2D_drbt6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 12

[node name="MoveTip" parent="CanvasLayer" instance=ExtResource("3_dvwo2")]
unique_name_in_owner = true
visible = false
dialogue = "Welcome, friends, to the forty-third annual HARVEST OF SOULS!

In this contest of strength, speed and wit each of our challengers will have ten minutes to try and collect enough souls to earn the Crystal Chalice and their chance at freedom!

We've arranged an demonstration for our loyal viewers before the main event, so let's see how this Reaper fares in this simulated gauntlet!"

[node name="JumpTip" parent="CanvasLayer" instance=ExtResource("3_dvwo2")]
unique_name_in_owner = true
visible = false
dialogue = "Look, there's a Shambler now! Good thing there's a handy stone pillar for the contestant to escape to."

[node name="AttackTip" parent="CanvasLayer" instance=ExtResource("3_dvwo2")]
unique_name_in_owner = true
visible = false
dialogue = "Fabulous! However, there's no entertainment value in just avoiding harm. Why don't you show us what that blade is used for, dear contestant?"

[node name="XpTip" parent="CanvasLayer" instance=ExtResource("3_dvwo2")]
unique_name_in_owner = true
visible = false
dialogue = "Wonderful! That departed sould left behind some [color=aqua]Soul Fragments[/color] and [color=yellow]coins[/color]. Those will surely be useful in the competition!"

[node name="LevelUpTip" parent="CanvasLayer" instance=ExtResource("3_dvwo2")]
unique_name_in_owner = true
visible = false
dialogue = "Look, there's a Shambler now! Good thing there's a handy stone pillar for the contestant to escape to."

[node name="SuperTip" parent="CanvasLayer" instance=ExtResource("3_dvwo2")]
unique_name_in_owner = true
visible = false
dialogue = "Look! It's a whole pack of Skullbats! Whatever will our contestant do now!?

(Pay attention to the orbs in the bottom left corner of your HUD. A full orb allows you to perform a [color=crimson]Finishing Move[/color], a powerful wide range attack.)

(Orbs fill up when collecting soul fragments, and you can store up to two Finishing Moves at a time before additional soul fragments are lost.)"

[node name="ShopTip" parent="CanvasLayer" instance=ExtResource("3_dvwo2")]
unique_name_in_owner = true
visible = false
dialogue = "All those freshly minted coins could be useful at this trading post! Maybe our contestant should give it a try."

[node name="FinalTip" parent="CanvasLayer" instance=ExtResource("3_dvwo2")]
unique_name_in_owner = true
visible = false
dialogue = "One last thing dear audience -- pay close attention to the phase of the moon! As it changes throughout the event so too will the battlefield conditions.

And that's all we have time for right now. Let's get on with the show!"

[node name="MoveKeys" type="Control" parent="CanvasLayer" groups=["keyHelpers"]]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InputLabel" parent="CanvasLayer/MoveKeys" instance=ExtResource("3_0kbhp")]
layout_mode = 0
offset_left = 774.0
offset_top = 256.0
offset_right = 860.0
offset_bottom = 290.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
action = "left"

[node name="InputLabel2" parent="CanvasLayer/MoveKeys" instance=ExtResource("3_0kbhp")]
layout_mode = 0
offset_left = 909.0
offset_top = 256.0
offset_right = 995.0
offset_bottom = 290.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
action = "down"

[node name="InputLabel4" parent="CanvasLayer/MoveKeys" instance=ExtResource("3_0kbhp")]
layout_mode = 0
offset_left = 909.0
offset_top = 182.0
offset_right = 995.0
offset_bottom = 216.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
action = "up"

[node name="InputLabel3" parent="CanvasLayer/MoveKeys" instance=ExtResource("3_0kbhp")]
layout_mode = 0
offset_left = 1071.0
offset_top = 256.0
offset_right = 1157.0
offset_bottom = 290.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
action = "right"

[node name="Label" type="Label" parent="CanvasLayer/MoveKeys"]
layout_mode = 0
offset_left = 784.0
offset_top = 85.0
offset_right = 1130.0
offset_bottom = 130.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 32
text = "Try moving around"
uppercase = true

[node name="JumpKey" type="Control" parent="CanvasLayer" groups=["keyHelpers"]]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InputLabel" parent="CanvasLayer/JumpKey" instance=ExtResource("3_0kbhp")]
layout_mode = 0
offset_left = 909.0
offset_top = 181.0
offset_right = 995.0
offset_bottom = 215.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20

[node name="Label" type="Label" parent="CanvasLayer/JumpKey"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 720.0
offset_top = 85.0
offset_right = 1152.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 32
text = "Jump up to the platform"
uppercase = true

[node name="AttackKey" type="Control" parent="CanvasLayer" groups=["keyHelpers"]]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InputLabel" parent="CanvasLayer/AttackKey" instance=ExtResource("3_0kbhp")]
layout_mode = 0
offset_left = 909.0
offset_top = 181.0
offset_right = 995.0
offset_bottom = 215.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
action = "attack"

[node name="Label" type="Label" parent="CanvasLayer/AttackKey"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 720.0
offset_top = 85.0
offset_right = 1152.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 32
text = "Attack the Shambler"
horizontal_alignment = 1
uppercase = true

[node name="XpKey" type="Control" parent="CanvasLayer" groups=["keyHelpers"]]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InputLabel" parent="CanvasLayer/XpKey" instance=ExtResource("3_0kbhp")]
layout_mode = 0
offset_left = 909.0
offset_top = 181.0
offset_right = 995.0
offset_bottom = 215.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
action = "interact"

[node name="Label" type="Label" parent="CanvasLayer/XpKey"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 720.0
offset_top = 85.0
offset_right = 1152.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 32
text = "Open your status panel"
horizontal_alignment = 1
uppercase = true

[node name="SuperKey" type="Control" parent="CanvasLayer" groups=["keyHelpers"]]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InputLabel" parent="CanvasLayer/SuperKey" instance=ExtResource("3_0kbhp")]
layout_mode = 0
offset_left = 909.0
offset_top = 181.0
offset_right = 995.0
offset_bottom = 215.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
action = "attack"

[node name="Label" type="Label" parent="CanvasLayer/SuperKey"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 720.0
offset_top = 85.0
offset_right = 1152.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 32
text = "Hold the attack button"
horizontal_alignment = 1
uppercase = true

[node name="ShopKey" type="Control" parent="CanvasLayer" groups=["keyHelpers"]]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InputLabel" parent="CanvasLayer/ShopKey" instance=ExtResource("3_0kbhp")]
layout_mode = 0
offset_left = 909.0
offset_top = 181.0
offset_right = 995.0
offset_bottom = 215.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
action = "interact"

[node name="Label" type="Label" parent="CanvasLayer/ShopKey"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 720.0
offset_top = 85.0
offset_right = 1152.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 32
text = "Press the menu button near the shop"
horizontal_alignment = 1
uppercase = true

[node name="JumpTrigger" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(-291, 151)
scale = Vector2(7.85142, 10.1673)

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpTrigger"]
shape = SubResource("RectangleShape2D_8jkj6")

[node name="AttackTrigger" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(50, 92)
scale = Vector2(7.20652, 4.82172)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackTrigger"]
position = Vector2(-1.94269, 3.31832)
scale = Vector2(0.631356, 0.870737)
shape = SubResource("RectangleShape2D_8jkj6")

[node name="AttackTrigger2" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(453, 97)
scale = Vector2(9.57004, 11.6119)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackTrigger2"]
position = Vector2(-1.94269, 3.31832)
scale = Vector2(0.631356, 0.870737)
shape = SubResource("RectangleShape2D_8jkj6")

[node name="ShopTrigger" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(1155, 96)
scale = Vector2(9.57004, 11.6119)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopTrigger"]
position = Vector2(-1.94269, 3.31832)
scale = Vector2(0.631356, 0.870737)
shape = SubResource("RectangleShape2D_8jkj6")

[node name="FinalTrigger" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(1541, 98)
scale = Vector2(9.57004, 11.6119)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinalTrigger"]
position = Vector2(-1.94269, 3.31832)
scale = Vector2(0.631356, 0.870737)
shape = SubResource("RectangleShape2D_8jkj6")

[node name="Pillar" parent="." instance=ExtResource("5_mg3jf")]
position = Vector2(39, 240)

[node name="Zombie" parent="." instance=ExtResource("6_avfxn")]
process_mode = 4
position = Vector2(112, 238)

[node name="Enemy" parent="." groups=["phase2"] instance=ExtResource("7_v6ew8")]
process_mode = 4
position = Vector2(898, 40)

[node name="Enemy2" parent="." groups=["phase2"] instance=ExtResource("7_v6ew8")]
process_mode = 4
position = Vector2(976, 82)

[node name="Enemy3" parent="." groups=["phase2"] instance=ExtResource("7_v6ew8")]
process_mode = 4
position = Vector2(833, 93)

[node name="Enemy4" parent="." groups=["phase2"] instance=ExtResource("7_v6ew8")]
process_mode = 4
position = Vector2(905, 119)

[node name="Enemy5" parent="." groups=["phase2"] instance=ExtResource("7_v6ew8")]
process_mode = 4
position = Vector2(991, 148)

[node name="Enemy6" parent="." groups=["phase2"] instance=ExtResource("7_v6ew8")]
process_mode = 4
position = Vector2(875, 187)

[node name="Merchant" parent="." instance=ExtResource("8_v7xag")]
position = Vector2(1305, 239)

[node name="Sign" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(1302, 202)
texture = ExtResource("9_icu4e")

[connection signal="body_entered" from="JumpTrigger" to="." method="jumpTipTriggered"]
[connection signal="body_entered" from="AttackTrigger" to="." method="attackTipTriggered"]
[connection signal="body_entered" from="AttackTrigger2" to="." method="superTipTriggered"]
[connection signal="body_entered" from="ShopTrigger" to="." method="shopTipTriggered"]
[connection signal="body_entered" from="FinalTrigger" to="." method="finalTipTriggered"]
[connection signal="died" from="Zombie" to="." method="zombieDied"]
